--- a/src/main/resources/templates/american.html
+++ b/src/main/resources/templates/american.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гавайська піца</title>
+    <title>Американа</title>
     <style>
                 body {
             font-family: 'Arial', sans-serif;
@@ -44,10 +44,10 @@
 </head>
 <body>
     <div class="content">
-        <h1>Гавайська</h1>
-        <h2>129 UAH</h2>
-        <p>Балик, куряче філе, ананас, кукурудза, моцарела</p>
-        <p>580g</p>
+        <h1>Американа</h1>
+        <h2>139 UAH</h2>
+        <p>Салямі, куряче філе, балик, гриби, помідор, чеддер, моцарела</p>
+        <p>610g</p>
         <h1 th:text="${message}"></h1>
         <a th:href="@{/}">Go back to Home Page</a>
         <br/>
@@ -56,7 +56,7 @@
         </form>
     </div>
 
-    <img src="https://cdn-media.choiceqr.com/prod-eat-bakery-nezalezh/menu/xFDDVyG-GvqSdRx-fbNhZFS.jpeg" alt="Гавайська піца">
+    <img src="https://cdn-media.choiceqr.com/prod-eat-bakery-novoprich/menu/bEHWQEw-WpzIOFB-QFEGFO.jpeg" alt="Американа">
 
 </body>
 </html>
